# humanizer-agent

./: .gitignore  ARTIFACTS_INTEGRATION_COMPLETE.md  ARTIFACTS_PHASE2_COMPLETE.md  BOOK_BUILDER_BUGS_FIXED.md  BOOK_BUILDER_TESTING_GUIDE.md  CLAUDE.md  DATABASE_STATUS.md  FIXES_APPLIED.md  GITHUB_DESCRIPTION.md  INCOMPLETE_FEATURES.md  INTEGRATION_COMPLETE.md  MCP_TEST_REPORT_OCT10.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_OCT10.md  PERSONIFIER_CURATED_COMPLETE.md  PERSONIFIER_EVALUATION_AND_RESEARCH.md  PERSONIFIER_FRONTEND_COMPLETE.md  PERSONIFIER_FRONTEND_PLAN.md  README.md  README_SESSION_MANAGEMENT.md  SESSION_HANDOFF.md  SESSION_INTEGRATION_STATUS.md  SESSION_SUMMARY_OCT10.md  SESSION_SUMMARY_OCT9.md  SESSION_SUMMARY_OCT9_FINAL.md  SESSION_SUMMARY_OCT9_PART2.md  SESSION_SUMMARY_OCT9_PART3.md  TEST_RESULTS.md  TIER_SYSTEM_PLAN.md  WORKSTATION_GUIDE.md  dry_run_recovery.py  find_missing_images.py  recover_images_by_filename.py  recovery_log.txt  start.sh  test_backend.sh  test_filename_match.py  test_find_missing.py
backend/: .env.example  ADVANCED_EMBEDDINGS.md  API_LIBRARY_ROUTES.md  API_ROUTES.md  API_VISION_ROUTES.md  DATABASE_SWITCHING.md  EMBEDDINGS_GUIDE.md  INFRASTRUCTURE_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_START_DB_SWITCHING.md  REFACTORING_PLAN.md  TESTING_DATABASE_SETUP.md  __init__.py  alembic.ini  config.py  core_dependencies.py  dbexplore  dbinit  dbswitch  docker-compose.test.yml  embedgen  main.py  pyproject.toml  requirements.txt  setup_db.sh
backend/agents/: __init__.py  transformation_agent.py
backend/alembic/: env.py
backend/api/: __init__.py  artifact_routes.py  book_routes.py  gizmo_routes.py  import_routes.py  library_collections.py  library_media.py  library_routes.py  library_schemas.py  library_transformations.py  (+7 more)
(+171 files in other folders)
